feature: adding the rest of the label crud methods
