# src/config/swagger-setup.json
@@ -98,6 +98,267 @@
                         }
                     }
                 }
+            },
+            "get": {
+                "description": "Lists all labels, or apply a set o query rules",
+                "tags": ["Labels"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "query",
+                        "description": "Label ID."
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Label name."
+                    },
+                    {
+                        "name": "userId",
+                        "in": "query",
+                        "description": "Label userId."
+                    },
+                    {
+                        "name": "createdAt",
+                        "in": "query",
+                        "description": "Label createdAt date string."
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "No token provided. || Invalid token.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "examples": {
+                                    "No token provided": {
+                                        "value": {
+                                            "error": "No token provided."
+                                        }
+                                    },
+                                    "Invalid token": {
+                                        "value": {
+                                            "error": "Invalid token."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "No data found."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/label"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/labels/{labelId}": {
+            "put": {
+                "description": "Update label.",
+                "tags": ["Labels"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "labelId",
+                        "in": "path",
+                        "description": "Label ID."
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Tasks"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "No labelId provided."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "No token provided. || Invalid token.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "examples": {
+                                    "No token provided": {
+                                        "value": {
+                                            "error": "No token provided."
+                                        }
+                                    },
+                                    "Invalid token": {
+                                        "value": {
+                                            "error": "Invalid token."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Label not found."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Label updated."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete label.",
+                "tags": ["Labels"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "labelId",
+                        "in": "path",
+                        "description": "Label ID."
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "No labelId provided."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "No token provided. || Invalid token.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "examples": {
+                                    "No token provided": {
+                                        "value": {
+                                            "error": "No token provided."
+                                        }
+                                    },
+                                    "Invalid token": {
+                                        "value": {
+                                            "error": "Invalid token."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Label not found."
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No content."
+                    }
+                }
             }
         }
     },
@@ -107,6 +368,33 @@
                 "type": "http",
                 "scheme": "bearer",
                 "format": "JWT"
+            }
+        },
+        "schemas": {
+            "label": {
+                "type": "object",
+                "properties": {
+                    "_id": {
+                        "type": "string",
+                        "example": "6332d9f019b387f4fbffadd9"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Home tasks"
+                    },
+                    "userId": {
+                        "type": "string",
+                        "example": "6332d9f019b387f4fbffadd8"
+                    },
+                    "createdAt": {
+                        "type": "string",
+                        "example": "2022-09-27T11:09:36.752Z"
+                    },
+                    "deletedAt": {
+                        "type": "string",
+                        "example": null
+                    }
+                }
             }
         }
     }
