# src/routes/labelRoutes.ts
@@ -4,6 +4,11 @@ import { authorize } from "../middlewares";
 
 const labelRoutes = Router();
 
-labelRoutes.post('/', authorize, LabelController.createLabel);
+labelRoutes.use(authorize)
+
+labelRoutes.post('/', LabelController.storeLabel);
+labelRoutes.get('/', LabelController.showLabels);
+labelRoutes.put('/:labelId', LabelController.updateLabels);
+labelRoutes.delete('/:labelId', LabelController.deleteLabels);
 
 export default labelRoutes;
